--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - build-tools-19.1.0
     - android-11
     - android-15
+    - android-21
 sudo: true
 script:
     - sudo rm -f /etc/mavenrc
